--- a/linksproject/linksproject.csproj
+++ b/linksproject/linksproject.csproj
@@ -11,6 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.0" />
     <PackageReference Include="UmbracoCms.Core" Version="8.18.15" />
   </ItemGroup>
 
